@@ -1,2 +1,4 @@
 1.9.0
+   - bug [12924] "At delete markere en post i repositoriet skal være tilgængeligt for JS"
+   Tilføjet klassen JSFedoraObjectModification med metoden deleteMarkObject
 
